Multiple changes: 1) Percentage span for skills moved to below skill bar for better readability on mobile screens. 2) Fixed minimum width for mobile devices from 360px to 1080px for modern high-res cellphones.

--- a/css/base.css
+++ b/css/base.css
@@ -552,7 +552,7 @@ textarea {
 /* ------------------------------------------------------------------- 
  * small mobile devices - (_grid.scss)
  * ------------------------------------------------------------------- */
-@media screen and (max-width:400px) {
+@media screen and (max-width:1080px) {
 	.row .row {
 		padding-left: 0;
 		padding-right: 0;
